[package]
name = "protest"
version = "0.1.0"
edition = "2024"

[lib]
name = "protest"
path = "src/lib.rs"

[dependencies]
bytes = "1.11.1"
derive_more = { version = "2.1.1", features = ["full"] }
futures-util = "0.3.32"
mime = "0.3.17"
quiche = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-quiche = "0.19.0"
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
